--- a/front/angular.json
+++ b/front/angular.json
@@ -34,8 +34,9 @@
               
               "node_modules/bootstrap/scss/bootstrap.scss",
 
-              "node_modules/bootstrap-icons/font/bootstrap-icons.scss"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
 
+            
 
             ],
             "scripts": [
