customer order many to one

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -11,3 +11,7 @@ Spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+
+spring.security.user.name = user
+spring.security.user.password = pass
+
