--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -11,7 +11,7 @@ Spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-spring.mvc.dispatch-options-request=true
+#spring.mvc.dispatch-options-request=true
 
 
 
