--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -4,12 +4,15 @@ server.port=8000
 spring.datasource.url=jdbc:mysql://localhost:3306/marketplace
 spring.datasource.username=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-
+spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8
 
 
 Spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+spring.messages.encoding=UTF-8
+
 
 #spring.mvc.dispatch-options-request=true
 
