--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "icons": "^1.0.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.28",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
