--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 server.port=8000
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/marketplace
+spring.datasource.url=jdbc:mysql://localhost:3306/marketplace?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
+#spring.messages.encoding=UTF-8
+#server.servlet.encoding.charset=UTF-8
+#server.servlet.encoding.force-response=true
 
+#spring.http.encoding.charset=UTF-8 
+#spring.http.encoding.enabled=true
 
 Spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
