--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8000
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/marketplace?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/marketplace
 spring.datasource.username=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
