--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.11.1",
     "icons": "^1.0.0",
     "jquery": "^3.7.1",
+    "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.28",
     "tslib": "^2.3.0",
