--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "karma-jasmine-html-reporter": "^2.1.0"
   },
   "dependencies": {
-    "@ng-bootstrap/ng-bootstrap": "^15.1.1"
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "ngx-bootstrap": "^11.0.2"
   }
 }
