--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -18,5 +18,7 @@ spring.sql.init.mode=always
 
 #spring.mvc.dispatch-options-request=true
 
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
 
 
